2000-10-27  Lyndon Tremblay  <humasect@home.com>

	* Source/NSObject.m ([NSObject +new]): No longer sends 2 messages,
	uses NSAllocateObject().
	([NSObject +alloc]): Likewise, no message sending within the method.

2000-10-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLHandle.m: Make class registration thread safe.
	Tidy initialisation to use designated initialiser.

2000-10-27  Adam Fedor  <fedor@gnu.org>

	* Added localization support
	* configure.in: Look for locale.h
	* Resources: New directory, files for languages.
	* Headers/gnustep/base/NSUserDefaults.h: Add missing localization
	keys.
	* Source/GSLocale.m: New functions for dealing with locales.
	* Source/NSUserDefaults.m (-_unlocalizedDefaults): New method.
	(-sharedUserDefaults): Set up Language domain. 
	(-userLanguages): Create our own defaults, if necessary, to avoid
	recursion with sharedUserDefaults.
	(__createStandardSearchList): Put NSGlobalDomain before Language
	domain to match MacOSX docs (wasn't specified in OpenStep docs).
	* Documentation/gsdoc/NSUserDefaults.m: Updated.

	* Tools/locale_alias.m: New test-tool mostly for maintainance use.

2000-10-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: When deserialising selectors, register new
	selectors if they don't already exist - so we can unarchive a
	selector into a program where no objects implements it (we might
	still want to use it over DO or to store in another archive).
	Change suggested by N.Pero.
	* Source/GSMime.m: Mime parser classes partially written.
	* Headers/Foundation/GSMime.h: mime class headers
	* Documentation/gsdoc/GSMime.gsdoc: documentation
	* Documentation/gsdoc/GSMimeDocument.gsdoc: documentation
	* Documentation/gsdoc/GSMimeParser.gsdoc: documentation
	Various files partially implemented to add MIME parsing support.
	Intended to aid implementation of HTTP version of NSURLHandle.

2000-10-24  Adam Fedor  <fedor@gnu.org>

	* Source/NSCalendarDate.m (-initWithString:calendarFormat:locale:): 